remove memory notifications