@@ -13,7 +13,8 @@
                                   [criterium "0.4.6"]
                                   [com.clojure-goes-fast/clj-memory-meter "0.3.0"]
                                   [com.google.guava/guava "33.0.0-jre"]]
-                   :jvm-opts ["-Djdk.attach.allowAttachSelf"]}}
+                   :jvm-opts ["-Djdk.attach.allowAttachSelf"
+                                    "-XX:+EnableDynamicAgentLoading"]}}
 
   :plugins [[lein-codox "0.10.8"]
             [lein-ancient "0.7.0"]
